--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "ai-spike-data-annotation-tool",
+  "name": "csv-time-series-annotator",
+  "homepage": "https://createskyblue.github.io/csv-time-series-annotator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "papaparse": "^5.5.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "papaparse": "^5.5.3",
     "uplot": "^1.6.32"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "fs-extra": "^11.2.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
