build(config): 移除homepage配置并更新部署脚本
- 移除package.json中的homepage字段
- 更新deploy脚本使用predeploy钩子
- 修改部署目标目录为dist并添加仓库地址和分支参数

build(vite): 添加base配置支持相对路径部署

- 在vite.config.ts中添加base: './'配置
- 支持应用在子路径下正确运行

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "csv-time-series-annotator",
-  "homepage": "https://createskyblue.github.io/csv-time-series-annotator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -r https://github.com/createskyblue/csv-time-series-annotator -b gh-pages"
   },
   "dependencies": {
     "papaparse": "^5.5.3",
